--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-server.port=7070
-
+server.port= 7070
 spring.devtools.livereload.enabled=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 server.servlet.session.timeout=1800
 
-
+#spring.h2.console.enabled=true
 # 카카오 로그인 설정
 kakao.client.id=682741f5d12d607fd2c7730bf0fa96bb
 kakao.client.secret=RiwAKV2tVtwS8chMFeu1Y3S59ELlrGTZ
@@ -16,12 +15,13 @@ kakao.redirect.url=http://localhost:19006/kakao/callback
 naver.client.id=h53Ik6glHaKCdN_23B0i
 naver.client.secret=TdzhiO0_yr
 naver.redirect.url=http://localhost:7070/naver/callback
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=tmdgus1
-spring.datasource.url=jdbc:mysql://localhost:3306/tipi?useSSL=false&serverTimezone=UTC
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.password=tmdgus12
+spring.datasource.url=jdbc:mysql://awseb-e-q3m3kw8tjm-stack-awsebrdsdatabase-g0hldog669fp.c7aoeck4qqck.ap-northeast-2.rds.amazonaws.com:3306/ebdb?useSSL=false&serverTimezone=UTC
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.data.rest.base-path=/api
