리다이렉트 주소로 토큰값 넘김

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,15 +7,23 @@ server.servlet.session.timeout=1800
 server.port = 7070
 #spring.h2.console.enabled=true
 # 카카오 로그인 설정
-kakao.client.id=682741f5d12d607fd2c7730bf0fa96bb
-kakao.client.secret=RiwAKV2tVtwS8chMFeu1Y3S59ELlrGTZ
-kakao.redirect.url=http://localhost:19006/kakao/callback
+kakao.client.id=ca2235afbfde35af42da3255c2fef3d1
+kakao.client.secret=Uabx4SekTDKokuSxHhRYA7pEPtiyZnQV
+kakao.redirect.url=http://tipibackend-env.eba-nvgyp2tx.ap-northeast-2.elasticbeanstalk.com/kakao/callback
+#kakao.redirect.url=http://localhost:7070/kakao/callback
 logging.level.org.springframework.web=TRACE
 # 네이버 로그인 설정
-naver.client.id=h53Ik6glHaKCdN_23B0i
-naver.client.secret=TdzhiO0_yr
+# ?? ? ??
+#naver.client.id=h53Ik6glHaKCdN_23B0i
+#naver.client.secret=TdzhiO0_yr
 #naver.redirect.url=http://localhost:7070/naver/callback
 naver.redirect.url=http://tipibackend-env.eba-nvgyp2tx.ap-northeast-2.elasticbeanstalk.com/naver/callback
+#
+
+naver.client.id=e9QEuKh0XFxw1FIorxFB
+naver.client.secret=IdXYPF18Wf
+#naver.redirect.url=http://localhost:7070/naver/callback
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=tmdgus12
