feat(/Post):crud 메인 페이지 생성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ logging.level.org.springframework.web=TRACE
 # ?? ? ??
 #naver.client.id=h53Ik6glHaKCdN_23B0i
 #naver.client.secret=TdzhiO0_yr
-#naver.redirect.url=http://localhost:7070/naver/callback
-naver.redirect.url=http://tipibackend-env.eba-nvgyp2tx.ap-northeast-2.elasticbeanstalk.com/naver/callback
+naver.redirect.url=http://localhost:7070/naver/callback
+#naver.redirect.url=http://tipibackend-env.eba-nvgyp2tx.ap-northeast-2.elasticbeanstalk.com/naver/callback
 #
 
 naver.client.id=e9QEuKh0XFxw1FIorxFB
